<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/no_internet_lottie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_internet" />
    <TextView
        android:id="@+id/try_again_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/spacing_extra_giant"
        app:layout_constraintBottom_toTopOf="@+id/clothes_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clothes_card_view">

            <TextView
                android:id="@+id/country_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/country_name"
                android:layout_marginTop="@dimen/spacing_giant"
                android:layout_marginBottom="@dimen/spacing_small"
                android:textSize="@dimen/text_giant"
                app:layout_constraintBottom_toTopOf="@+id/day_details_text_view"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
            android:id="@+id/day_details_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/day_details"
            app:layout_constraintBottom_toTopOf="@id/text_view"
            app:layout_constraintTop_toBottomOf="@+id/country_name_text_view" />
            <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="@dimen/text_giant"
            app:layout_constraintStart_toEndOf="@+id/degree_text_view"
            app:layout_constraintTop_toTopOf="@+id/degree_text_view" />
            <TextView
            android:id="@+id/degree_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toTopOf="@+id/temp_text_view"
            app:layout_constraintStart_toEndOf="@+id/temp_text_view"/>
            <TextView
            android:id="@+id/temp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="@dimen/text_giant"
            app:layout_constraintTop_toBottomOf="@id/text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/weather_statu_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_statu"
            android:textSize="@dimen/text_giant"
            android:layout_marginVertical="@dimen/spacing_medium"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/temp_text_view"
            app:layout_constraintBottom_toTopOf="@id/lottieAnimationView"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lottie_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_statu_text_view"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/cloud_light" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/clothes_card_view"
        android:layout_width="@dimen/card_dim"
        android:layout_height="@dimen/card_dim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint"
        android:visibility="visible"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="@dimen/radius_default">

    <ImageView
        android:id="@+id/clothes_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>